--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -39,6 +39,10 @@ $bp-smallest: 31.25em; // 500px
 html {
     font-size: 62.5%; //1rem = 10px, 10/16 = 62.5%
     box-sizing: border-box;
+
+    @media only screen and (max-width: $bp-large) {
+        font-size: 50%;
+    }
 }
 
 body {
