--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -4,6 +4,11 @@
     background-color: var(--color-grey-light-2);
     box-shadow: var(--shadow-dark);
     min-height: 50rem;
+
+    @media only screen and (max-width: $bp-largest) {
+        margin: 0;
+        width: 100%;
+    }
 }
 
 .header {
@@ -53,4 +58,7 @@
 
 .user-reviews {
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
