Added responsiveness to the website

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -14,6 +14,12 @@
     align-items: center;
     justify-content: center;
 
+    @media only screen and (max-width: $bp-smallest) {
+        order: 1;
+        flex: 0 0 99%;
+        background-color: var(--color-grey-light-2);
+    }
+
     &__input {
         font-family: inherit;
         font-size: inherit;
@@ -387,15 +393,18 @@
         margin-right: 0.7rem;
 
         //Older browsers
-        // background-image: url(/img/chevron-thin-right.svg);
-        // background-size: cover;
+        background-image: url(/img/chevron-thin-right.svg);
+        background-size: cover;
 
         //Newer browsers - masks
-        background-color: var(--color-primary);
-        -webkit-mask-image: url(/img/chevron-thin-right.svg);
-        -webkit-mask-size: cover;
-        mask-image: url(/img/chevron-thin-right.svg);
-        mask-size: cover;
+        @supports (-webkit-mask-image: url()) or (mask-image: url()) {
+            background-color: var(--color-primary);
+            -webkit-mask-image: url(/img/chevron-thin-right.svg);
+            -webkit-mask-size: cover;
+            mask-image: url(/img/chevron-thin-right.svg);
+            mask-size: cover;
+            background-image: none;
+        }
     }
 }
 
@@ -412,6 +421,7 @@
     }
 
     &__friends {
+        display: flex;
     }
 
     &__photo {
@@ -436,6 +446,11 @@
     margin-bottom: 3.5rem;
     position: relative;
     overflow: hidden;
+
+    @media only screen and (max-width: $bp-medium) {
+        padding: 2rem;
+        margin-bottom: 3rem;
+    }
 
     &__text {
         z-index: 10;
@@ -497,6 +512,10 @@
 .cta {
     padding: 3.5rem 0;
     text-align: center;
+
+    @media only screen and (max-width: $bp-medium) {
+        padding: 3rem 0;
+    }
 
     &__book-now {
         text-transform: uppercase;
